# scuc_cpp

./: CMakeLists.txt  Makefile  ReadMe.md  plot.ipynb
include/scuc/: Config.hpp  ConstraintBuilder.hpp  InputLoader.hpp  JsonUtils.hpp  NetworkFactors.hpp  ObjectiveBuilder.hpp  SCUCSolver.hpp  SolutionExporter.hpp  SolverFactory.hpp  Timer.hpp  Types.hpp  VariableManager.hpp
results/case118/: dispatch.csv  solution_output.json
results/case14/: dispatch.csv  solution_output.json
results/case30/: dispatch.csv  solution_output.json
results/case300/: dispatch.csv  solution_output.json
results/case57/: dispatch.csv  solution_output.json
src/: main.cpp
test_cases/case300/: 2017-01-01.json
test_cases/case57/: 2017-01-01.json
